[gd_scene load_steps=2 format=3 uid="uid://ble4ud265uab6"]

[ext_resource type="Script" uid="uid://doxndpwus4y23" path="res://Scripts/calculadora_digital.gd" id="1_2nwgc"]

[node name="Calculadora digital" type="Node2D"]
script = ExtResource("1_2nwgc")

[node name="Panel" type="Panel" parent="."]
offset_right = 428.0
offset_bottom = 650.0

[node name="LblTitulo" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 8.0
offset_right = 135.0
offset_bottom = 31.0
text = "CALCULADORA"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 82.0
offset_right = -15.0
offset_bottom = -21.0

[node name="LineEditPantalla" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="Btn_Percent" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "%"

[node name="Btn_CE" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "CE"

[node name="Btn_C" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "C"

[node name="Btn_Delete" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "Borrar"

[node name="Btn_1-X" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "1/X"

[node name="Btn_X2" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "X2"

[node name="Btn_R2" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "R2"

[node name="Btn_Divide" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "/"

[node name="Btn_7" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "7"

[node name="Btn_8" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "8"

[node name="Btn_9" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "9"

[node name="Btn_Power" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "X"

[node name="Btn_4" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "4"

[node name="Btn_5" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "5"

[node name="Btn_6" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "6"

[node name="Btn_Minus" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "-"

[node name="Btn_1" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "1"

[node name="Btn_2" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "2"

[node name="Btn_3" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "3"

[node name="Btn_Plus" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "+"

[node name="Btn_+-" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "+/-"

[node name="Btn_0" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "0"

[node name="Btn_Dot" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "."

[node name="Btn_Equal" type="Button" parent="Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "="

[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Btn_Delete" to="." method="_on_btn_delete_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Btn_1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Btn_2" to="." method="_on_btn_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Btn_3" to="." method="_on_btn_3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Btn_0" to="." method="_on_btn_0_pressed"]
